// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader should render 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  />
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
       
      Payer Space
    </div>
  </h1>
</div>
`;

exports[`PageHeader should render app icon 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  />
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
      <span
        class="app-icon app-icon-black"
        title="Payer Space"
      >
        PS
      </span>
       
      Payer Space
    </div>
  </h1>
</div>
`;

exports[`PageHeader should render app icon color 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  />
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
      <span
        class="app-icon app-icon-green"
        title="Payer Space"
      >
        PS
      </span>
       
      Payer Space
    </div>
  </h1>
</div>
`;

exports[`PageHeader should render app icon color branded 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  />
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
      <span
        class="app-icon app-icon-branded-green"
        title="Payer Space"
      >
        PS
        <span
          class="caret"
        />
      </span>
       
      Payer Space
    </div>
  </h1>
</div>
`;

exports[`PageHeader should render children 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  />
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
       
      <p>
        this is cool
      </p>
    </div>
  </h1>
</div>
`;

exports[`PageHeader should render feedback 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  />
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
       
      Payer Space
    </div>
    <div
      class="float-md-right d-inline-block hidden-print dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-light"
        type="button"
      >
        Give Feedback
      </button>
      <div
        aria-hidden="true"
        class="p-3 dropdown-menu dropdown-menu-right"
        role="menu"
        style="width: 400px;"
        tabindex="-1"
      >
        <div
          class="text-center"
        >
          <p>
            Tell us what you think about Payer Space.
          </p>
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-light"
              style="font-size: 1.4em; padding: .2em .4em;"
              type="button"
            >
              <span
                class="icon icon-smile"
              />
              <span
                class="sr-only"
              >
                Smiley face
              </span>
            </button>
            <button
              class="btn btn-light"
              style="font-size: 1.4em; padding: .2em .4em;"
              type="button"
            >
              <span
                class="icon icon-meh"
              />
              <span
                class="sr-only"
              >
                Meh face
              </span>
            </button>
            <button
              class="btn btn-light"
              style="font-size: 1.4em; padding: .2em .4em;"
              type="button"
            >
              <span
                class="icon icon-frown"
              />
              <span
                class="sr-only"
              >
                Frowny face
              </span>
            </button>
          </div>
          <div
            class="invalid-feedback"
          >
            Please select one of the faces above
          </div>
          <textarea
            aria-label="Please provide any feedback, requests, and/or defects."
            class="mt-3 form-control"
            placeholder="Feedback? Requests? Defects? (optional)"
          />
          <div
            class="mt-3 text-right"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Send
            </button>
          </div>
        </div>
      </div>
    </div>
  </h1>
</div>
`;
